[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uois_toolkit"
version = "0.1.0"
description = "A toolkit for loading Unseen Object Instance Segmentation (UOIS) datasets."
authors = [
    { name = "Jishnu Jaykumar Padalunkal", email = "jishnu.p@utdallas.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "pytorch-lightning",
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "pycocotools>=2.0.2",
    "open3d>=0.13.0",
    "pytest>=7.0",
    "imageio"
]

[project.optional-dependencies]
detectron2 = []  

[tool.setuptools.packages.find]
where = ["."]



